# CosyVoice

./: cosyvoice-backup-env.yml  cosyvoice-backup-pip.txt  cosyvoice_helpers.py  download.py  example.py  pyproject.toml  requirements.txt
cosyvoice/dataset/: processor.py
cosyvoice/utils/: file_utils.py
