[project]
name = "cosyvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.3",
    "inflect==7.3.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "networkx==3.1",
    "numpy==1.26.4",
    # RTX 5090 (sm_120) setup — see notes at bottom of file.
    # nvcc compiler staged for future deepspeed training (not needed for inference).
    "nvidia-cuda-nvcc-cu12>=12.9.86",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime==1.18.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "onnxruntime-gpu==1.18.0 ; sys_platform == 'linux'",
    # Bumped from 20231117: old version pinned triton<3, which conflicts with torch>=2.7 (needs triton>=3.3).
    "openai-whisper==20250625",
    "protobuf==4.25",
    "pyarrow==18.1.0",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "setuptools<81",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    # torch>=2.7 from the cu128 index (below) — required for RTX 5090 / Blackwell sm_120 kernels.
    # Old torch==2.3.1 gave "sm_120 not compatible" / "no kernel image available".
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers==4.51.3",
    "uvicorn==0.30.0",
    "wetext==0.0.4",
    "wget==3.2",
    "x-transformers==2.11.24",
]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
# cu128 wheels are the first with sm_120 kernels for the RTX 5090 (Blackwell).
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# --- RTX 5090 / training notes ------------------------------------------------
# deepspeed was removed because it's training-only (cosyvoice/bin/train.py,
# cosyvoice/utils/train_utils.py) and its import crashes on this machine:
# transformers auto-imports it, and deepspeed runs `$CUDA_HOME/bin/nvcc -V` at
# import time, but there's no system CUDA toolkit here (only pip runtime wheels).
#
# To re-enable training:
#   uv add "deepspeed==0.15.1 ; sys_platform == 'linux'"
#   export CUDA_HOME=.venv/lib/python3.10/site-packages/nvidia/cuda_nvcc   # has bin/nvcc
# (A machine-wide system CUDA toolkit would be a better long-term choice.)
# -----------------------------------------------------------------------------
